API for adjusting max size of elasticsearch index
